# Qbit

./: .gitignore  .gitmodules  CMakeLists.txt  ClearBuild.bat  CreateSolution.bat  LICENSE  README.md  Run.bat  build-cmake.bat  build-cmake.sh  build-glew.sh  build-glfw.bat  build-glfw.sh  build.bat  build.sh  main.cpp  push.sh
BuildScripts/Windows/: build-cmake.bat  build-glfw.bat  build.bat
Dependencies/imgui/: imgui.h
Editor/: CMakeLists.txt  imgui.ini
Editor/ProjectTest/: a.qproj
Editor/ProjectTest/Assets/Scenes/: Untitled.qbit  Untitled1.qbit
Editor/SandboxProject/: CMakeLists.txt  Sandbox.qproj  SandboxProject.qproj
Editor/SandboxProject/Assets/Scenes/: Physics2D.qbit  PinkCube.qbit  Untitled1.qbit
Editor/SandboxProject/Assets/Scripts/: CMakeLists.txt  Camera.cs  CreateSolution.bat  Player.cs
Editor/SandboxProject/Assets/Scripts/Source/: Player.cs
Editor/assets/scenes/: Example.qbit
Editor/assets/shaders/: FlatColor.glsl  Renderer2D_Text.glsl  VulkanTest.glsl
Editor/q/: CMakeLists.txt  q.qproj
Editor/q/Assets/Scenes/: q.qbit
Editor/q/Assets/Scripts/: B.cs  C.cs  T.cs
Editor/qp/: CMakeLists.txt  qp.qproj
Editor/qp/Assets/Scenes/: qp.qbit
Editor/src/: EditorLayer.cpp  EditorLayer.h  EditorLayer.hpp  QbitApp.cpp
Editor/src/Panels/: ContentBrowserPanel.cpp  ContentBrowserPanel.h  ProjectManager.cpp  ProjectManager.h  SceneHierarchyPanel.cpp  SceneHierarchyPanel.h
Engine/: CMakeLists.txt
Engine/src/: Qbit.h  qbpch.cpp  qbpch.h
Engine/src/Core/: Application.cpp  Application.hpp  Base.h  CMakeLists.txt  Engine.cpp  Engine.hpp  EntryPoint.cpp  EntryPoint.hpp  KeyCodes.h  Layer.cpp  Layer.hpp  LayerStack.cpp  LayerStack.hpp  Log.cpp  Log.h  MouseCodes.h
Engine/src/Events/: ApplicationEvent.h  KeyEvent.h  MouseEvent.h
Engine/src/Platform/OpenGL/: OpenGLBuffer.cpp  OpenGLBuffer.h  OpenGLContext.cpp  OpenGLContext.h  OpenGLFramebuffer.cpp  OpenGLFramebuffer.h  OpenGLRendererAPI.cpp  OpenGLRendererAPI.h  OpenGLShader.cpp  OpenGLShader.h  OpenGLTexture.cpp  OpenGLTexture.h  OpenGLUniformBuffer.cpp  OpenGLUniformBuffer.h  OpenGLVertexArray.cpp  OpenGLVertexArray.h
Engine/src/Platform/Vulkan/: VulkanBuffer.cpp  VulkanBuffer.h  VulkanContext.cpp  VulkanContext.h  VulkanRendererAPI.cpp  VulkanRendererAPI.h  VulkanShader.cpp  VulkanShader.h  VulkanVertexArray.h
Engine/src/Platform/Windows/: WindowsInput.cpp  WindowsPlatformUtils.cpp  WindowsWindow.cpp  WindowsWindow.h
Engine/src/Qbit/Core/: Application.cpp  Application.h  Application.hpp  Assert.h  Base.h  Buffer.h  Engine.cpp  Engine.h  EntryPoint.h  FileSystem.cpp  FileSystem.h  Input.h  Layer.cpp  Layer.h  Layer.hpp  LayerStack.cpp  LayerStack.h  LayerStack.hpp  Log.h  MouseCodes.h  Timer.h  Timestep.h  UUID.cpp  UUID.h  Window.cpp  Window.h
Engine/src/Qbit/Debug/: Instrumentor.h
Engine/src/Qbit/Events/: ApplicationEvent.h  Event.h  KeyEvent.h  MouseEvent.h
Engine/src/Qbit/ImGui/: ImGuiBuild.cpp  ImGuiLayer.cpp  ImGuiLayer.h
Engine/src/Qbit/Math/: Math.cpp  Math.h
Engine/src/Qbit/Physics/: Physics2D.h
Engine/src/Qbit/Project/: Project.cpp  Project.h  ProjectSerializer.cpp  ProjectSerializer.h
Engine/src/Qbit/Renderer/: Buffer.cpp  Buffer.h  Camera.h  EditorCamera.cpp  EditorCamera.h  Font.cpp  Font.h  Framebuffer.cpp  Framebuffer.h  GraphicsContext.cpp  GraphicsContext.h  IndexBuffer.hpp  MSDFData.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  OrthographicCamera.cpp  OrthographicCamera.h  OrthographicCameraController.cpp  OrthographicCameraController.h  RenderCommand.cpp  RenderCommand.h  Renderer.cpp  Renderer.h  Renderer2D.cpp  Renderer2D.h  RendererAPI.cpp  RendererAPI.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBuffer.cpp  UniformBuffer.h  VertexArray.cpp  VertexArray.h
Engine/src/Qbit/Renderer/Shader/: BasicShader.glsl  DirectionalLight.glsl  SpotLight.glsl  shadow_mapping_depth.glsl
Engine/src/Qbit/Scene/: Components.h  Entity.cpp  Entity.h  Scene.cpp  Scene.h  SceneCamera.cpp  SceneCamera.h  SceneSerializer.cpp  SceneSerializer.h  ScriptableEntity.h
Engine/src/Qbit/Scripting/: ScriptEngine.cpp  ScriptEngine.h  ScriptGlue.cpp  ScriptGlue.h
Engine/src/Qbit/System/: Physic.cpp
Engine/src/Qbit/UI/: UI.h
Engine/src/Qbit/Utils/: PlatformUtils.h
Engine/src/Renderer/: CMakeLists.txt  Renderer.hpp  VertexArray.cpp  VertexBuffer.cpp  Window.cpp  Window.hpp
Engine/src/Renderer/Shader/: debug_quad.glsl
Engine/src/Scene/: CMakeLists.txt  Scene.cpp  Scene.hpp
Engine/src/System/: CMakeLists.txt  Physic.cpp  Physic.hpp
Misc/: Naming_Rules.txt
Qbit-ScriptCore/: CMakeLists.txt  Main.cs  Player.cs  Qbit-ScriptCore.csproj  Vector2.cs
Qbit-ScriptCore/Properties/: AssemblyInfo.cs
Qbit-ScriptCore/Source/Qbit/: Input.cs  InternalCalls.cs  KeyCode.cs  Vector3.cs  Vector4.cs
Qbit-ScriptCore/Source/Qbit/Scene/: Components.cs  Entity.cs
Sandbox/: CMakeLists.txt  imgui.ini
Sandbox/assets/shaders/: Texture.glsl  debug_cascade.glsl  model_loading.glsl  triangle_demo.glsl
Sandbox/src/: ExampleLayer.cpp  ExampleLayer.h  Sandbox2D.cpp  Sandbox2D.h  SandboxApp.cpp
Scripts/: BuildSolution.bat  ClearBuild.bat  CreateSolution.bat  CreateSolutionBuild.bat  Setup.bat
include/: Box.hpp  Collider.hpp  Component.hpp  Definitions.hpp  Engine.hpp  GameObject.hpp  InputHandler.hpp  Object.hpp  ObjectFactory.hpp  Renderer.hpp  Rigidbody.hpp  Scene.hpp  Sphere.hpp  Transform.hpp  Vector.hpp
src/: Application.cpp  Box.cpp  Component.cpp  Engine.cpp  GameObject.cpp  InputHandler.cpp  Object.cpp  ObjectFactory.cpp  Renderer.cpp  Scene.cpp  Sphere.cpp  Transform.cpp  Vector.cpp  build.bat  main.cpp
src/Core/: Application.cpp  Application.hpp  ECS.hpp  Engine.cpp  Engine.hpp  EntryPoint.cpp  Layer.hpp  Timestep.hpp  Window.cpp  Window.hpp  stb_image.cpp
src/Renderer/: Camera.hpp  IndexBuffer.cpp  Renderer.cpp  Renderer.hpp  Shad.hpp  Shader.cpp  Shader.hpp  Texture.cpp  Texture.hpp  VertexArray.hpp  VertexBuffer.hpp  VertexBufferLayout.hpp  Window.cpp  Window.hpp
src/Scene/: Components.hpp  Scene.cpp  Scene.hpp
src/System/: Physic.cpp  Physic.hpp
(+12 files in other folders)
